# flask-keyauth

./: README.md  pyproject.toml  setup.py
examples/: app.py
examples/templates/: dashboard.html  index.html  login.html
flask-keyauth/: keyauth.py
flask_keyauth/: __init__.py  keyauth.py
tests/: test_keyauth.py
